add pricing & packages section to classes.html

--- a/classes.html
+++ b/classes.html
@@ -498,6 +498,88 @@
             </div>
         </section>
 
+        <!-- Pricing Section -->
+        <section class="pricing-section">
+            <div class="container">
+                <div class="pricing-header">
+                    <h2 data-i18n="classes:pricing.title">Pricing & Packages</h2>
+                    <p class="pricing-subtitle" data-i18n="classes:pricing.subtitle">The more you practice, the more you save! Choose the package that fits your journey.</p>
+                </div>
+
+                <div class="pricing-grid">
+                    <!-- Drop-in Card -->
+                    <div class="pricing-card">
+                        <div class="pricing-card-header">
+                            <h3 data-i18n="classes:pricing.dropIn.name">Drop-in</h3>
+                            <p class="pricing-card-description" data-i18n="classes:pricing.dropIn.description">Perfect for trying us out</p>
+                        </div>
+                        <div class="pricing-card-body">
+                            <div class="pricing-amount">
+                                <span class="pricing-currency">$</span>
+                                <span class="pricing-value">250</span>
+                                <span class="pricing-unit">MXN</span>
+                            </div>
+                            <p class="pricing-per-class" data-i18n="classes:pricing.dropIn.perClass">per class</p>
+                        </div>
+                    </div>
+
+                    <!-- 4 Classes Card -->
+                    <div class="pricing-card">
+                        <div class="pricing-card-header">
+                            <h3 data-i18n="classes:pricing.pack4.name">4 Classes</h3>
+                            <p class="pricing-card-description" data-i18n="classes:pricing.pack4.description">Once a week practice</p>
+                        </div>
+                        <div class="pricing-card-body">
+                            <div class="pricing-amount">
+                                <span class="pricing-currency">$</span>
+                                <span class="pricing-value">900</span>
+                                <span class="pricing-unit">MXN</span>
+                            </div>
+                            <p class="pricing-per-class" data-i18n="classes:pricing.pack4.perClass">$225 per class</p>
+                            <span class="pricing-savings" data-i18n="classes:pricing.pack4.savings">Save $100 MXN</span>
+                        </div>
+                    </div>
+
+                    <!-- 8 Classes Card -->
+                    <div class="pricing-card">
+                        <div class="pricing-card-header">
+                            <h3 data-i18n="classes:pricing.pack8.name">8 Classes</h3>
+                            <p class="pricing-card-description" data-i18n="classes:pricing.pack8.description">Twice a week practice</p>
+                        </div>
+                        <div class="pricing-card-body">
+                            <div class="pricing-amount">
+                                <span class="pricing-currency">$</span>
+                                <span class="pricing-value">1,600</span>
+                                <span class="pricing-unit">MXN</span>
+                            </div>
+                            <p class="pricing-per-class" data-i18n="classes:pricing.pack8.perClass">$200 per class</p>
+                            <span class="pricing-savings" data-i18n="classes:pricing.pack8.savings">Save $400 MXN</span>
+                        </div>
+                    </div>
+
+                    <!-- 12 Classes Card - Best Value -->
+                    <div class="pricing-card pricing-card--featured">
+                        <div class="pricing-badge" data-i18n="classes:pricing.pack12.badge">Best Value</div>
+                        <div class="pricing-card-header">
+                            <h3 data-i18n="classes:pricing.pack12.name">12 Classes</h3>
+                            <p class="pricing-card-description" data-i18n="classes:pricing.pack12.description">Three times a week practice</p>
+                        </div>
+                        <div class="pricing-card-body">
+                            <div class="pricing-amount">
+                                <span class="pricing-currency">$</span>
+                                <span class="pricing-value">2,100</span>
+                                <span class="pricing-unit">MXN</span>
+                            </div>
+                            <p class="pricing-per-class" data-i18n="classes:pricing.pack12.perClass">$175 per class</p>
+                            <span class="pricing-savings pricing-savings--featured" data-i18n="classes:pricing.pack12.savings">Save $900 MXN</span>
+                        </div>
+                    </div>
+                </div>
+
+                <p class="pricing-note" data-i18n="classes:pricing.note">With our packages, you can attend regular classes with all of our teachers as shown in the schedule above. Packages are valid for one calendar month from purchase date. Unused classes do not roll over, so make sure to use them all!</p>
+            </div>
+        </section>
+
         <!-- CTA Section -->
         <section class="cta-section">
             <div class="container">
