add certification page draft

--- a/classes.html
+++ b/classes.html
@@ -162,6 +162,12 @@
                 <li><a href="about.html" class="navbar-link" data-i18n="common:nav.about">About</a></li>
                 <li><a href="classes.html" class="navbar-link active" data-i18n="common:nav.classes">Classes</a></li>
                 <li><a href="events.html" class="navbar-link" data-i18n="common:nav.events">Events</a></li>
+                <li class="has-dropdown">
+                    <span class="navbar-link dropdown-trigger" role="button" aria-haspopup="true" aria-expanded="false" tabindex="0" data-i18n="common:nav.certifications">Certifications <i data-lucide="chevron-down" class="dropdown-icon"></i></span>
+                    <div class="nav-dropdown" role="menu">
+                        <a href="/certifications/aerial-yoga-100.html" class="nav-dropdown-item" role="menuitem" data-i18n="common:nav.certificationsDropdown.aerial100">100-Hour Aerial Yoga Teacher Training</a>
+                    </div>
+                </li>
                 <li><a href="/blog/dist/" class="navbar-link" data-i18n="common:nav.blog">Blog</a></li>
             </ul>
         </div>
@@ -624,6 +630,7 @@
                             <li><a href="about.html" data-i18n="common:footer.sitemap.about">About</a></li>
                             <li><a href="classes.html" data-i18n="common:footer.sitemap.classes">Classes</a></li>
                             <li><a href="events.html" data-i18n="common:footer.sitemap.events">Events</a></li>
+                            <li><a href="/certifications/aerial-yoga-100.html" data-i18n="common:footer.sitemap.certifications">Certifications</a></li>
                             <li><a href="/blog/dist/" data-i18n="common:footer.sitemap.blog">Blog</a></li>
                         </ul>
                     </div>
