--- a/es/classes.html
+++ b/es/classes.html
@@ -162,6 +162,12 @@
                 <li><a href="/es/about.html" class="navbar-link">Acerca De</a></li>
                 <li><a href="/es/classes.html" class="navbar-link active">Clases</a></li>
                 <li><a href="/es/events.html" class="navbar-link">Eventos</a></li>
+                <li class="has-dropdown">
+                    <span class="navbar-link dropdown-trigger" role="button" aria-haspopup="true" aria-expanded="false" tabindex="0">Certificaciones</span>
+                    <div class="nav-dropdown" role="menu">
+                        <a href="/es/certifications/aerial-yoga-100.html" class="nav-dropdown-item" role="menuitem">Formación de Profesores de Yoga Aéreo - 100 Horas</a>
+                    </div>
+                </li>
                 <li><a href="/blog/dist/" class="navbar-link">Blog</a></li>
             </ul>
         </div>
@@ -624,6 +630,7 @@
                             <li><a href="/es/about.html">Acerca De</a></li>
                             <li><a href="/es/classes.html">Clases</a></li>
                             <li><a href="/es/events.html">Eventos</a></li>
+                            <li><a href="/es/certifications/aerial-yoga-100.html">Certificaciones</a></li>
                             <li><a href="/blog/dist/">Blog</a></li>
                         </ul>
                     </div>
