--- a/es/index.html
+++ b/es/index.html
@@ -246,6 +246,12 @@
                 <li><a href="/es/about.html" class="navbar-link">Acerca De</a></li>
                 <li><a href="/es/classes.html" class="navbar-link">Clases</a></li>
                 <li><a href="/es/events.html" class="navbar-link">Eventos</a></li>
+                <li class="has-dropdown">
+                    <span class="navbar-link dropdown-trigger" role="button" aria-haspopup="true" aria-expanded="false" tabindex="0">Certificaciones</span>
+                    <div class="nav-dropdown" role="menu">
+                        <a href="/es/certifications/aerial-yoga-100.html" class="nav-dropdown-item" role="menuitem">Formación de Profesores de Yoga Aéreo - 100 Horas</a>
+                    </div>
+                </li>
                 <li><a href="/blog/dist/" class="navbar-link">Blog</a></li>
             </ul>
         </div>
@@ -628,7 +634,7 @@ El profundo conocimiento de Kundalini de Harjeet nos permite tener una práctica
                             <i data-lucide="minus" class="faq-icon faq-icon-minus"></i>
                         </button>
                         <div class="faq-answer" id="faq-answer-3">
-                            <p>¡Los estudiantes primerizos pueden probar cualquier clase por solo 100 pesos! Las tarifas regulares son de 250 pesos para clases de 1 hora (Hatha, Vinyasa, Aéreo) y 300 pesos para clases de 1.5 horas (Kundalini). También ofrecemos pases mensuales con descuento de 4 u 8 clases - contáctanos para más detalles sobre estos. Nos enorgullecemos de ofrecer calidad excepcional a un precio accesible - después de todo, el yoga es para todos nosotros.</p>
+                            <p>¡Los estudiantes primerizos pueden probar cualquier clase por solo $100 MXN! Después, las clases sueltas cuestan $250 MXN cada una. También ofrecemos paquetes mensuales que te ayudan a ahorrar más mientras más practiques: 4 clases por $900 MXN (ahorra $100), 8 clases por $1,600 MXN (ahorra $400), o 12 clases por $2,100 MXN (ahorra $900). Los paquetes son válidos por un mes y te dan acceso a todas las clases regulares con cualquiera de nuestros maestros. ¡Visita nuestra <a href='/classes.html'>página de clases</a> para más detalles!</p>
                         </div>
                     </div>
 
@@ -781,6 +787,7 @@ El profundo conocimiento de Kundalini de Harjeet nos permite tener una práctica
                             <li><a href="/es/about.html">Acerca De</a></li>
                             <li><a href="/es/classes.html">Clases</a></li>
                             <li><a href="/es/events.html">Eventos</a></li>
+                            <li><a href="/es/certifications/aerial-yoga-100.html">Certificaciones</a></li>
                             <li><a href="/blog/dist/">Blog</a></li>
                         </ul>
                     </div>
