--- a/certifications/aerial-yoga-100.html
+++ b/certifications/aerial-yoga-100.html
@@ -563,7 +563,7 @@
                         <span data-i18n="certifications:cta.buttons.whatsapp">WhatsApp</span>
                         <i data-lucide="message-circle"></i>
                     </a>
-                    <a href="mailto:satgurprasaadyoga@gmail.com?subject=Aerial%20Yoga%20Teacher%20Training%20Inquiry" class="btn btn-elegant">
+                    <a href="mailto:team@sgpyoga.co?subject=Aerial%20Yoga%20Teacher%20Training%20Inquiry" class="btn btn-elegant">
                         <span data-i18n="certifications:cta.buttons.email">Email</span>
                         <i data-lucide="mail"></i>
                     </a>
@@ -611,7 +611,7 @@
                                 <i data-lucide="mail"></i>
                                 <div>
                                     <span data-i18n="common:footer.contact.email">Email</span>:
-                                    <a href="mailto:satgurprasaadyoga@gmail.com" data-i18n="common:footer.contact.emailValue">satgurprasaadyoga@gmail.com</a>
+                                    <a href="mailto:team@sgpyoga.co" data-i18n="common:footer.contact.emailValue">team@sgpyoga.co</a>
                                 </div>
                             </div>
                             <div class="footer-contact-item">
