--- a/es/certifications/aerial-yoga-100.html
+++ b/es/certifications/aerial-yoga-100.html
@@ -573,7 +573,7 @@ Esa seguridad que hoy habita en mí es el recurso más valioso que ahora puedo t
                         <span>WhatsApp</span>
                         <i data-lucide="message-circle"></i>
                     </a>
-                    <a href="mailto:satgurprasaadyoga@gmail.com?subject=Aerial%20Yoga%20Teacher%20Training%20Inquiry" class="btn btn-elegant">
+                    <a href="mailto:team@sgpyoga.co?subject=Aerial%20Yoga%20Teacher%20Training%20Inquiry" class="btn btn-elegant">
                         <span>Correo</span>
                         <i data-lucide="mail"></i>
                     </a>
@@ -621,7 +621,7 @@ Esa seguridad que hoy habita en mí es el recurso más valioso que ahora puedo t
                                 <i data-lucide="mail"></i>
                                 <div>
                                     <span>Correo</span>:
-                                    <a href="mailto:satgurprasaadyoga@gmail.com">satgurprasaadyoga@gmail.com</a>
+                                    <a href="mailto:team@sgpyoga.co">team@sgpyoga.co</a>
                                 </div>
                             </div>
                             <div class="footer-contact-item">
