--- a/es/classes.html
+++ b/es/classes.html
@@ -596,7 +596,7 @@
                         <span>WhatsApp</span>
                         <i data-lucide="message-circle"></i>
                     </a>
-                    <a href="mailto:satgurprasaadyoga@gmail.com" class="btn btn-elegant">
+                    <a href="mailto:team@sgpyoga.co" class="btn btn-elegant">
                         <span>Correo Electrónico</span>
                         <i data-lucide="mail"></i>
                     </a>
@@ -644,7 +644,7 @@
                                 <i data-lucide="mail"></i>
                                 <div>
                                     <span>Correo</span>:
-                                    <a href="mailto:satgurprasaadyoga@gmail.com">satgurprasaadyoga@gmail.com</a>
+                                    <a href="mailto:team@sgpyoga.co">team@sgpyoga.co</a>
                                 </div>
                             </div>
                             <div class="footer-contact-item">
