--- a/es/events.html
+++ b/es/events.html
@@ -338,7 +338,7 @@
                                 <i data-lucide="mail"></i>
                                 <div>
                                     <span>Correo</span>:
-                                    <a href="mailto:satgurprasaadyoga@gmail.com">satgurprasaadyoga@gmail.com</a>
+                                    <a href="mailto:team@sgpyoga.co">team@sgpyoga.co</a>
                                 </div>
                             </div>
                             <div class="footer-contact-item">
