--- a/es/index.html
+++ b/es/index.html
@@ -113,7 +113,7 @@
         "https://sgpyoga.co/assets/photos/home/events-1200.webp"
       ],
       "telephone": "+525539061305",
-      "email": "satgurprasaadyoga@gmail.com",
+      "email": "team@sgpyoga.co",
       "address": {
         "@type": "PostalAddress",
         "addressLocality": "Mexico City",
@@ -801,7 +801,7 @@ El profundo conocimiento de Kundalini de Harjeet nos permite tener una práctica
                                 <i data-lucide="mail"></i>
                                 <div>
                                     <span>Correo</span>:
-                                    <a href="mailto:satgurprasaadyoga@gmail.com">satgurprasaadyoga@gmail.com</a>
+                                    <a href="mailto:team@sgpyoga.co">team@sgpyoga.co</a>
                                 </div>
                             </div>
                             <div class="footer-contact-item">
