--- a/events.html
+++ b/events.html
@@ -338,7 +338,7 @@
                                 <i data-lucide="mail"></i>
                                 <div>
                                     <span data-i18n="common:footer.contact.email">Email</span>:
-                                    <a href="mailto:satgurprasaadyoga@gmail.com" data-i18n="common:footer.contact.emailValue">satgurprasaadyoga@gmail.com</a>
+                                    <a href="mailto:team@sgpyoga.co" data-i18n="common:footer.contact.emailValue">team@sgpyoga.co</a>
                                 </div>
                             </div>
                             <div class="footer-contact-item">
