--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         "https://sgpyoga.co/assets/photos/home/events-1200.webp"
       ],
       "telephone": "+525539061305",
-      "email": "satgurprasaadyoga@gmail.com",
+      "email": "team@sgpyoga.co",
       "address": {
         "@type": "PostalAddress",
         "addressLocality": "Mexico City",
@@ -787,7 +787,7 @@
                                 <i data-lucide="mail"></i>
                                 <div>
                                     <span data-i18n="common:footer.contact.email">Email</span>:
-                                    <a href="mailto:satgurprasaadyoga@gmail.com" data-i18n="common:footer.contact.emailValue">satgurprasaadyoga@gmail.com</a>
+                                    <a href="mailto:team@sgpyoga.co" data-i18n="common:footer.contact.emailValue">team@sgpyoga.co</a>
                                 </div>
                             </div>
                             <div class="footer-contact-item">
