--- a/classes.html
+++ b/classes.html
@@ -596,7 +596,7 @@
                         <span data-i18n="classes:cta.whatsapp">WhatsApp</span>
                         <i data-lucide="message-circle"></i>
                     </a>
-                    <a href="mailto:satgurprasaadyoga@gmail.com" class="btn btn-elegant">
+                    <a href="mailto:team@sgpyoga.co" class="btn btn-elegant">
                         <span data-i18n="classes:cta.contact">Email</span>
                         <i data-lucide="mail"></i>
                     </a>
@@ -644,7 +644,7 @@
                                 <i data-lucide="mail"></i>
                                 <div>
                                     <span data-i18n="common:footer.contact.email">Email</span>:
-                                    <a href="mailto:satgurprasaadyoga@gmail.com" data-i18n="common:footer.contact.emailValue">satgurprasaadyoga@gmail.com</a>
+                                    <a href="mailto:team@sgpyoga.co" data-i18n="common:footer.contact.emailValue">team@sgpyoga.co</a>
                                 </div>
                             </div>
                             <div class="footer-contact-item">
